# side-glow

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  capture_service.rs  core.rs  main.rs  ui_adapter.rs  utils.rs
src/components/: glow_panel.rs  mod.rs  settings_panel.rs  tray_manager.rs  zone_preview.rs
