[package]
name = "sideglow"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[[bin]]
name = "SideGlow"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.34.0"
egui = "0.34.0"
parking_lot = "0.12.3"
tray-icon = "0.21.3"
anyhow = "1.0.95"
windows-capture = "1.1.0"
resvg = "0.47.0"
tiny-skia = "0.12.0"
usvg = "0.47.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.3"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_System_WinRT",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Graphics_Capture",
]
